--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,6 +2,7 @@ blank_issues_enabled: true
 contact_links:
   - name: Twitter
     url: https://twitter.com/opendata_sco
+    about: ''
   - name: Slack
     url: https://join.slack.com/t/opendatascotland/shared_invite/zt-yfcc64tg-xIF1cOxkWbKZqI8ZBPzkGg
     about: Please ask and answer questions here.
