--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -6,3 +6,12 @@ on:
 jobs:
   test_reusable:
     uses: JackGilmoreOrg/.github/.github/workflows/reusable.yml@main
+    secrets: inherit
+
+  job2:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo ${{secrets.TEST_SECRET}}
+
+    
+
